<resources>
    <string name="facebook_app_id">502131068113695</string>
    <string name="fb_login_protocol_scheme">fb502131068113695</string>
    <string name="facebook_client_token">f5c46cd71ca061513427a8bde43c1a9d</string>
    <string name="site_key">6Le5ddkkAAAAAIx6IfHPbCdW98gszYrU3Wp9vrjP</string>
    <string name="app_name">OLE</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="forgot_pass"><u>Forgot password?</u></string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="i_want_to_signup">I want to Sign up</string>
    <string name="skip">Skip</string>
    <string name="phone_no">Phone no.</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_pass">Password should be least 6 characters</string>
    <string name="pass_must">Password should be least 4 characters</string>
    <string name="select_country_code">Select Country code</string>
    <string name="enter_phone">Enter phone no.</string>
    <string name="enter_password">Password cannot be empty!</string>
    <string name="phone_not_start_0">Phone shouldn\'t start with 0</string>
    <string name="next">Next</string>
    <string name="select_user_type">Select user type</string>
    <string name="player">Player</string>
    <string name="referee">Referee</string>
    <string name="owner">Owner</string>
    <string name="select_usertype">Select user type first!</string>
    <string name="coming_soon">Coming soon</string>
    <string name="first_name">First name</string>
    <string name="add_image_optional">Add image (Optional)</string>
    <string name="last_name">Last name</string>
    <string name="nick_name">Nick name</string>
    <string name="select_country">Select Country</string>
    <string name="select_country_region">Select Country / region</string>
    <string name="select_city">Select city</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="terms_cond_register"><![CDATA[By clicking signup, You agree our ]]><font color='#0077B6'><u>terms and conditions</u></font></string>
    <string name="club_name">Stadium name</string>
    <string name="club_name_ar">Stadium name(Arabic)</string>
    <string name="reset_pass"><a href="#">Reset Password?</a></string>
    <string name="enter_email_associated_account">Enter the email address associated with your account.</string>
    <string name="submit">Submit</string>
    <string name="recover_pass">Recover Password</string>
    <string name="enter_code_pass">Enter verification code and password</string>
    <string name="resend">Resend</string>
    <string name="resend_underline"><u>Resend</u></string>
    <string name="didnt_receive_code">Didn\'t receive the code? Resend in</string>
    <string name="invalid_code">Invalid code</string>
    <string name="error_occured">Error occurred. Please try again!</string>
    <string name="new_password">New password</string>
    <string name="enter_verfi_code">Enter verification code</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="we_have_sent_otp">We’ve sent a code by SMS to </string>
    <string name="verify">Verify</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_first_name_english">Enter first name in english</string>
    <string name="enter_nick_name_english">Enter nick name in english</string>
    <string name="enter_nick_name">Enter nick name</string>
    <string name="enter_last_name_english">Enter last name in english</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="enter_dob">Enter date of birth</string>
    <string name="dismiss_underline"><u>Dismiss</u></string>
    <string name="alert">Alert</string>
    <string name="clubs">Stadiums</string>
    <string name="bookings">Bookings</string>
    <string name="matches">Matches</string>
    <string name="favorites">Favorites</string>
    <string name="rank">Rank</string>
    <string name="my_payment">My Payments</string>
    <string name="saved_cards">Saved Cards</string>
    <string name="ole_credit">Ole Credit</string>
    <string name="add_my_price">Add My Price</string>
    <string name="add_offers">Add Offers</string>
    <string name="on_call_booking">On call booking</string>
    <string name="schedule_booking">Schedule booking</string>
    <string name="settings">Settings</string>
    <string name="challenges">Challenges</string>
    <string name="term_condition"><![CDATA[Terms & Condition]]></string>
    <string name="privacy_policy"><![CDATA[Privacy Policy]]></string>
    <string name="contact_us">Contact us</string>
    <string name="live_chat">Live chat</string>
    <string name="sign_out">Sign out</string>
    <string name="do_you_want_signout">Do you want to sign out?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="search_club_by_name">Search stadium by name</string>
    <string name="featured">Featured</string>
    <string name="start_from">Start from</string>
    <string name="see_all">See all</string>
    <string name="join_game">Join Game</string>
    <string name="accept">Accept</string>
    <string name="km_place">%s km</string>
    <string name="aed_place">%s AED</string>
    <string name="currency_place" formatted="false">%s %s</string>
    <string name="delete_account">Delete Account</string>
    <string name="confirm_delete_account">Your account will be deactivated, and all of your personal data will be removed automatically after 15 days. Log in within 15 days to use OLE again. Are you sure? You want to delete your account?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="filter">Filter</string>
    <string name="city">City</string>
    <string name="select_size">Select size</string>
    <string name="field_type">Field type</string>
    <string name="grass_type">Grass type</string>
    <string name="offers">Offers</string>
    <string name="available_time">Available time</string>
    <string name="apply">Apply</string>
    <string name="reset">Reset</string>
    <string name="reset_p">Reset Password</string>
    <string name="reset_underline"><u>Reset</u></string>
    <string name="done">Done</string>
    <string name="off">OFF</string>
    <string name="club_details">Stadium Details</string>
    <string name="club_rating">Stadium Rating</string>
    <string name="rating_not_zero">Rating cannot be zero</string>
    <string name="book">Book</string>
    <string name="booking">Booking</string>
    <string name="change_pass">Change password</string>
    <string name="blocked_users">Blocked users</string>
    <string name="featured_club">Featured stadium</string>
    <string name="offered_field">Offered field</string>
    <string name="update">Update</string>
    <string name="old_pass">Old password</string>
    <string name="new_pass">New password</string>
    <string name="confirm_pass">Confirm password</string>
    <string name="invalid_old_pass">Old password should be atleast 6 characters</string>
    <string name="invalid_new_pass">New password should be atleast 6 characters</string>
    <string name="pass_not_matched">Password is not matched</string>
    <string name="select_lang">Select language</string>
    <string name="book_now">Book Now</string>
    <string name="one_hour">1 Hour</string>
    <string name="one_half_hour">1.5 Hours</string>
    <string name="two_hour">2 Hours</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="offer_desc_place" formatted="false">"You have an offer on this field on %s at %s - %s. Discount price is %s %s"</string>
    <string name="offer_desc">You have an offer on this field</string>
    <string name="offer">Offer</string>
    <string name="free">Free</string>
    <string name="you_select_max_qty_place">You can select max quantity %d</string>
    <string name="duration">Duration</string>
    <string name="select_duration">Select duration</string>
    <string name="min">min</string>
    <string name="you_hide_this_slot">You hide this slot</string>
    <string name="slot_selected_dur_msg" formatted="false">Your selected duration is %s Hours and slot duration is %s Hours. Do you want to book for %s Hours ?</string>
    <string name="confirmation">Confirmation</string>
    <string name="selected_time_not_available">Selected time is already booked. Do you want to get notification when it\'s free?</string>
    <string name="add_waiting_user">Add waiting user</string>
    <string name="confirm_booking">Confirm booking</string>
    <string name="cancel_booking">Cancel booking</string>
    <string name="you_are_blocked_by_field_owner">You are blocked by field owner</string>
    <string name="select_date">Select date</string>
    <string name="select_time">Select time</string>
    <string name="booking_info">Booking information</string>
    <string name="select_payment_type">Select payment type</string>
    <string name="card">Card</string>
    <string name="cash">Cash</string>
    <string name="player_info">Player information</string>
    <string name="player_name">Player name</string>
    <string name="mobile_no">Mobile number</string>
    <string name="enter_promo_code">Enter promo code</string>
    <string name="field_name">Field name</string>
    <string name="field_size">Field size</string>
    <string name="day">Day</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="hour">Hour</string>
    <string name="card_coming_soon">Card payment is coming soon</string>
    <string name="enter_mobile_no">Enter mobile no</string>
    <string name="enter_name">Enter name</string>
    <string name="do_you_want_book_at_place" formatted="false">Do you want to book at %s on %s</string>
    <string name="congrat_booking_done">Congratulations your booking has successfully completed</string>
    <string name="go_to_booking_list">Go to Booking List</string>
    <string name="create_match">Create Match</string>
    <string name="select_date_range">Select Date Range</string>
    <string name="booking_detail">Booking Detail</string>
    <string name="time_to_update">Time To Update!</string>
    <string name="update_desc">We added lots of new features and fix some bugs to make your experience as smooth as possible</string>
    <string name="update_app">Update App</string>
    <string name="not_now"><u>Not Now</u></string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="sorting">Sorting</string>
    <string name="popularity">Popularity</string>
    <string name="price_high_to_low">Price: High to Low</string>
    <string name="price_low_to_high">Price: Low to High</string>
    <string name="new_user_txt">• If you are a new user, please input new password!</string>
    <string name="old_user_txt">• If you are an existing user, please input old password!</string>
    <string name="forgetPassword">• If you forget your password, please click reset password!</string>
    <string name="add_picture">Add picture</string>
    <string name="add_item">Add Item</string>
    <string name="item_name">Item name</string>
    <string name="enter_item_name">Enter item name</string>
    <string name="purchase_price">Purchase price</string>
    <string name="enter_purchase_price">Enter purchase price</string>
    <string name="sale_price">Sale price</string>
    <string name="enter_sale_price">Enter sale price</string>
    <string name="enter_qty">Enter quantity</string>
    <string name="qty">Qty</string>
</resources>