<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/best_player_card_bg_active"
            android:layout_gravity="center_vertical|center"
            android:padding="10dp"
            android:layout_marginBottom="@dimen/_20sdpp">

            <TextView
                android:id="@+id/new_user_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textAlignment="viewStart"
                android:text="@string/new_user_txt"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/old_user_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                android:padding="10dp"
                android:layout_marginTop="@dimen/_5sdpp"
                android:text="@string/old_user_txt"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                android:padding="10dp"
                android:layout_marginTop="@dimen/_5sdpp"
                android:text="@string/forgetPassword"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="@color/white"/>

        </LinearLayout>
</LinearLayout>