<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdpp"
        android:layout_marginStart="@dimen/_10sdpp"
        android:layout_marginEnd="@dimen/_10sdpp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_qty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/qty"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/darkTextColor" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdpp"
            android:layout_marginEnd="@dimen/_10sdpp"
            android:layout_weight="2"
            android:fontFamily="sans-serif"
            android:text="@string/item_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/darkTextColor" />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/price"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/darkTextColor" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdpp"
        android:background="@color/separatorColor"
        android:layout_below="@+id/linear"
        android:layout_marginStart="@dimen/_10sdpp"
        android:layout_marginEnd="@dimen/_10sdpp"/>

</RelativeLayout>