<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgVuColor"
    tools:context=".activities.OleUpdateAppActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/tv"
        android:layout_marginStart="@dimen/_20sdpp"
        android:layout_marginTop="@dimen/_50sdpp"
        android:layout_marginEnd="@dimen/_20sdpp"
        android:scaleType="centerInside"
        android:src="@drawable/update_image" />

    <TextView
        android:id="@+id/tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time_to_update"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:textColor="@color/blueColorNew"
        android:layout_margin="@dimen/_20sdpp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:fontFamily="sans-serif-medium"/>

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_desc"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal"
        android:textColor="@color/darkTextColor"
        android:layout_below="@+id/tv"
        android:layout_above="@id/btn_update"
        android:layout_marginStart="@dimen/_20sdpp"
        android:layout_marginEnd="@dimen/_20sdpp"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:fontFamily="sans-serif"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_update"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdpp"
        android:layout_marginEnd="@dimen/_20sdpp"
        android:layout_marginStart="@dimen/_20sdpp"
        android:layout_marginTop="@dimen/_25sdpp"
        android:layout_above="@id/btn_not_now"
        app:cardCornerRadius="@dimen/_5sdpp"
        app:cardElevation="0dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/green_btn_bg"
            android:scaleType="centerCrop"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/update_app"
            android:gravity="center"
            android:textColor="@color/whiteColor"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_not_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_15sdpp"
        android:layout_marginBottom="@dimen/_25sdpp"
        android:background="@null"
        android:text="@string/not_now"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/darkTextColor" />

</RelativeLayout>