<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".dialogs.OleShopSortingDialogFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_5sdpp"
        app:cardBackgroundColor="@color/bgVuColor"
        app:cardElevation="0dp">

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdpp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/sorting"
                    android:fontFamily="sans-serif-medium"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/darkTextColor"/>

            </RelativeLayout>

            <Button
                android:id="@+id/btn_popular"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdpp"
                android:textColor="@color/blueColorNew"
                android:text="@string/popularity"
                android:background="@drawable/rounded_corner_bg_white"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:fontFamily="sans-serif"
                android:layout_marginTop="@dimen/_10sdpp"
                android:layout_marginStart="@dimen/_15sdpp"
                android:layout_marginEnd="@dimen/_15sdpp"/>

            <Button
                android:id="@+id/btn_high"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdpp"
                android:textColor="@color/blueColorNew"
                android:layout_marginTop="@dimen/_2sdpp"
                android:text="@string/price_high_to_low"
                android:background="@drawable/rounded_corner_bg_white"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:fontFamily="sans-serif"
                android:layout_marginStart="@dimen/_15sdpp"
                android:layout_marginEnd="@dimen/_15sdpp"/>

            <Button
                android:id="@+id/btn_low"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdpp"
                android:textColor="@color/blueColorNew"
                android:layout_marginTop="@dimen/_2sdpp"
                android:text="@string/price_low_to_high"
                android:background="@drawable/rounded_corner_bg_white"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:fontFamily="sans-serif"
                android:layout_marginStart="@dimen/_15sdpp"
                android:layout_marginEnd="@dimen/_15sdpp"
                android:layout_marginBottom="@dimen/_15sdpp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>