<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgVuColor"
    tools:context=".inventory.OleAddItemActivity">

    <include
        android:id="@+id/bar"
        layout="@layout/oleapp_bar_main"/>

    <RelativeLayout
        android:id="@+id/photo_vu"
        android:layout_width="@dimen/_100sdpp"
        android:layout_height="@dimen/_100sdpp"
        android:layout_below="@id/bar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_20sdpp"
        android:background="@drawable/club_banner_bg">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_25sdpp"
                android:layout_height="@dimen/_25sdpp"
                android:scaleType="centerInside"
                android:src="@drawable/cam_ic_dark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdpp"
                android:gravity="center"
                android:text="@string/add_picture"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/subTextColor" />

        </LinearLayout>

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/img_vu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_7sdpp"
            android:layout_marginTop="@dimen/_7sdpp"
            android:layout_marginEnd="@dimen/_7sdpp"
            android:layout_marginBottom="@dimen/_7sdpp"
            android:scaleType="centerInside"
            app:riv_corner_radius="@dimen/_5sdpp" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btn_add"
        android:layout_below="@+id/photo_vu"
        android:layout_marginTop="@dimen/_15sdpp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdpp"
            android:layout_marginEnd="@dimen/_15sdpp"
            android:background="@drawable/settings_field_bg"
            android:orientation="vertical"
            android:padding="@dimen/_15sdpp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/item_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/darkTextColor" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdpp"
                    android:layout_marginTop="@dimen/_10sdpp"
                    android:background="@drawable/add_club_field_border">

                    <EditText
                        android:id="@+id/et_item_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/_10sdpp"
                        android:layout_marginEnd="@dimen/_10sdpp"
                        android:background="@null"
                        android:hint="@string/enter_item_name"
                        android:inputType="text"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@color/darkTextColor" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdpp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/purchase_price"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/darkTextColor" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdpp"
                    android:layout_marginTop="@dimen/_10sdpp"
                    android:background="@drawable/add_club_field_border">

                    <EditText
                        android:id="@+id/et_purchase_price"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/_10sdpp"
                        android:layout_marginEnd="@dimen/_10sdpp"
                        android:background="@null"
                        android:digits="1234567890."
                        android:hint="@string/enter_purchase_price"
                        android:inputType="numberDecimal"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@color/darkTextColor" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdpp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/sale_price"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/darkTextColor" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdpp"
                    android:layout_marginTop="@dimen/_10sdpp"
                    android:background="@drawable/add_club_field_border">

                    <EditText
                        android:id="@+id/et_sale_price"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/_10sdpp"
                        android:layout_marginEnd="@dimen/_10sdpp"
                        android:background="@null"
                        android:digits="1234567890."
                        android:hint="@string/enter_sale_price"
                        android:inputType="numberDecimal"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@color/darkTextColor" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdpp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_qty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/quantity"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/darkTextColor" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdpp"
                    android:layout_marginTop="@dimen/_10sdpp"
                    android:background="@drawable/add_club_field_border">

                    <EditText
                        android:id="@+id/et_qty"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/_10sdpp"
                        android:layout_marginEnd="@dimen/_10sdpp"
                        android:background="@null"
                        android:digits="1234567890"
                        android:hint="@string/enter_qty"
                        android:inputType="number"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@color/darkTextColor" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/tv_stock"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdpp"
                    android:fontFamily="sans-serif"
                    android:text="Current stock: 5"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/darkTextColor" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_add"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdpp"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/_15sdpp"
        app:cardElevation="0dp"
        app:cardCornerRadius="@dimen/_5sdpp"
        app:cardBackgroundColor="@color/greenColor">

        <TextView
            android:id="@+id/tv_add"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:fontFamily="sans-serif"
            android:text="@string/add_item"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/whiteColor" />

    </androidx.cardview.widget.CardView>

</RelativeLayout>